export class Square {
  constructor(
    private _id: string,
    private _x: number,
    private _y: number,
    private _disc: '' | 'black' | 'white'
  ) {}
}
