export interface GameGatewayInputPort {
  registerGame(): Promise<Response>
}
