export class Move {
  constructor(private _id: string, private _x: number, private _y: number) {}
}
